# mtls_lib

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .valgrind.supp  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.claude/agents/: c-code-reviewer.md
.githooks/: pre-commit
.github/actions/slack-notify/: action.yml
.github/workflows/: ci.yml  fuzzing.yml  go-bindings.yml  java-bindings.yml  release.yml  rust-bindings.yml  test.yml
bindings/go/: README.md  STRESS_TEST_README.md  config.go  conn.go  context.go  error.go  event.go  go.mod  identity.go  integration_test.go  listener.go  mtls.go  mtls_test.go  observer.go  stress_test.go  stress_test_optimized.go
bindings/go/examples/: README.md
bindings/go/examples/advanced_client/: advanced_client  main.go
bindings/go/examples/echo_server/: echo_server  main.go
bindings/go/examples/simple_client/: main.go  simple_client
bindings/go/examples/simple_server/: main.go  simple_server
bindings/java/: .clang-tidy  CMakeLists.txt  README.md  TESTING.md  pom.xml
bindings/java/examples/: SimpleClient.java  SimpleServer.java
bindings/java/src/main/c/: mtls_jni.c
bindings/java/src/main/java/com/mtls/: Config.java  Connection.java  Context.java  Listener.java  MtlsException.java  PeerIdentity.java
bindings/java/src/test/java/com/mtls/: AllTests.java  ConfigTest.java  ConnectionTest.java  IntegrationTest.java  MtlsExceptionTest.java  PeerIdentityTest.java
bindings/rust/: Cargo.toml  README.md
bindings/rust/mtls/: Cargo.toml
bindings/rust/mtls-sys/: Cargo.toml  build.rs  wrapper.h
bindings/rust/mtls-sys/src/: lib.rs
bindings/rust/mtls/examples/: async_client.rs  async_server.rs  debug_stress.rs  echo_server.rs  simple_client.rs  simple_server.rs
bindings/rust/mtls/src/: config.rs  conn.rs  context.rs  error.rs  event.rs  ffi_helpers.rs  identity.rs  lib.rs  listener.rs
bindings/rust/mtls/tests/: async_api_test.rs  async_stress_test.rs  stress_test.rs
cmake/: mtlsConfig.cmake.in
docs/: BUILD.md  DEVELOPMENT.md  IDENTITY_VERIFICATION.md  SECURITY_AUDIT.md
examples/: CMakeLists.txt  advanced_client.c  cert_reload_demo.c  echo_server.c  kill_switch_demo.c  observability_demo.c  simple_client.c  simple_server.c
include/mtls/: mtls.h  mtls_config.h  mtls_error.h  mtls_types.h
scripts/: install-hooks.sh  run_valgrind.sh
src/: mtls_conn.c  mtls_ctx.c  mtls_error.c  mtls_identity.c  mtls_listener.c  mtls_tls.c
src/internal/: mtls_internal.h  platform.h  platform_darwin.c  platform_linux.c  platform_win32.c
tests/: CMakeLists.txt  README.md  fuzz_oversized_sans.c  test_cert_reload.c  test_identity.c  test_memory_safety.c  test_observability.c  test_phase4_features.c  test_san_validation.c  test_security_fixes.c
tests/fuzz/: .clang-tidy  CMakeLists.txt  README.md  fuzz_address_parsing.c  fuzz_certificate_validation.c  fuzz_common.c  fuzz_common.h  fuzz_pem_parsing.c  fuzz_san_validation.c
tests/fuzz/corpus/fuzz_address_parsing/: fqdn.txt  hostname.txt  ipv6.txt
tests/fuzz/corpus/fuzz_san_validation/: boundary_plus_one.txt  spiffe_id.txt
tests/fuzz/scripts/: build_afl.sh  manage_corpus.sh  run_afl.sh
