[package]
name = "mtls"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe, idiomatic Rust bindings for the mTLS C library"
readme = "../README.md"

[dependencies]
mtls-sys = { path = "../mtls-sys" }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"
time = "0.3"

[[test]]
name = "stress"
path = "tests/stress_test.rs"
required-features = ["stress"]

[features]
stress = []
