[package]
name = "mtls"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe, idiomatic Rust bindings for the mTLS C library"
readme = "../README.md"

[dependencies]
mtls-sys = { path = "../mtls-sys" }
libc = "0.2"
tokio = { version = "1.0", optional = true, features = ["rt-multi-thread", "net", "macros"] }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"
time = "0.3"
tokio-test = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

[[test]]
name = "stress"
path = "tests/stress_test.rs"
required-features = ["stress"]

[features]
default = []
stress = []
async-tokio = ["dep:tokio", "dep:futures"]
